--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
-body {
+* {
   margin: 0;
   padding: 0;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  overflow: hidden;
+}
+
+#app {
+  width: 100vw;
+  height: 100vh;
 }
